Minor changes to master branch

--- a/public/loading.html
+++ b/public/loading.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700&display=swap" rel="stylesheet">
+
     <style type='text/css'>
         html {
             width: 100%;
@@ -13,6 +15,7 @@
         
         body {
             margin: 0px !important;
+            font-family: 'Roboto', sans-serif;
         }
         .center {
             position: absolute;
@@ -30,6 +33,17 @@
             color: #fff;
             opacity: 0.7;
             font-family: 'Ubuntu', sans-serif;
+        }
+        p {
+            position: absolute;
+            text-align: center;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            margin: 0px auto;
+            padding: 5px 10px;
+            width: 100%;
+
         }
         img {
             margin-left: 5px;
@@ -139,6 +153,9 @@
         <div id="loading-wrapper">
             <div id="loading-content"></div>
         </div>
+    </div>
+    <div>
+        <p>Connect Development Build 0.1.0</p>
     </div>
 </body>
 </html>
